docs: add ytt deep dive and reorganize sidebar for ecosystem focus
New content:
- Add comprehensive ytt (Carvel) deep dive covering:
  - Structural YAML templating approach
  - Data values and schema system
  - Overlays for surgical patching
  - Functions, modules, and libraries
  - Assertions and validation
  - Comparison with Helm, Kustomize, Jsonnet
  - Starlark fork customizations (block-based syntax)

Sidebar reorganization:
- Create new "Ecosystem Deep Dives" section grouping:
  - Use Cases Overview (index page)
  - Bazel vs Buck2 comparison
  - Skycfg (Stripe)
  - ytt (Carvel)
  - Aspect CLI & AXL
  - Tooling & IDE Support
- Streamline "Starlark Language" section to core concepts
- Better teaching flow: learn language → explore ecosystem

Also updated:
- resources.mdx: Add ytt deep dive link
- use-cases.mdx: Add deep dive cards and quick reference table

--- a/docs-website/src/content/docs/starlark/resources.mdx
+++ b/docs-website/src/content/docs/starlark/resources.mdx
@@ -79,7 +79,7 @@ Curated resources for learning and working with Starlark.
 | Tool | Description |
 |------|-------------|
 | [Skycfg](https://github.com/stripe/skycfg) | Type-safe Protobuf configuration (Stripe) - [Deep Dive](/starlark/skycfg-deep-dive/) |
-| [ytt](https://carvel.dev/ytt/) | YAML templating with Starlark |
+| [ytt](https://carvel.dev/ytt/) | Structural YAML templating (Carvel/VMware) - [Deep Dive](/starlark/ytt-deep-dive/) |
 
 ## Learning Resources
 
