--- a/docs/website/src/content/docs/starlark/buck2.mdx
+++ b/docs/website/src/content/docs/starlark/buck2.mdx
@@ -395,3 +395,12 @@ Buck2's starlark-rust has unique features:
 - [BXL Guide](https://buck2.build/docs/bxl/bxl/)
 - [starlark-rust](https://github.com/facebook/starlark-rust)
 - [For comparison with Bazel](/sky/starlark/build-systems-comparison/)
+
+## Source References
+
+This documentation is based on Buck2 source code at commit [`824de34`](https://github.com/facebook/buck2/tree/824de3447009387d2b30e1409fcb7229e997fd05):
+
+- [starlark-rust (embedded)](https://github.com/facebook/buck2/tree/824de3447009387d2b30e1409fcb7229e997fd05/starlark-rust)
+- [prelude rules](https://github.com/facebook/buck2/tree/824de3447009387d2b30e1409fcb7229e997fd05/prelude) - 87 directories of Starlark rules
+- [record.rs](https://github.com/facebook/buck2/blob/824de3447009387d2b30e1409fcb7229e997fd05/starlark-rust/starlark/src/values/types/record.rs) - Record type implementation
+- [Writing rules guide](https://github.com/facebook/buck2/blob/824de3447009387d2b30e1409fcb7229e997fd05/docs/rule_authors/writing_rules.md)
