--- a/docs/website/src/content/docs/starlark/tilt.mdx
+++ b/docs/website/src/content/docs/starlark/tilt.mdx
@@ -10,7 +10,7 @@ import { Aside, Tabs, TabItem } from '@astrojs/starlight/components';
 [Tilt](https://tilt.dev/) is a development tool for Kubernetes that uses Starlark through **Tiltfiles** to define local development workflows. It automates building, pushing, and deploying containers with live updates.
 
 <Aside type="note">
-Tilt uses [**starlark-go**](https://github.com/google/starlark-go) (`go.starlark.net`), the canonical Go implementation of Starlark. This is the same implementation used by Copybara, Skycfg, and other Go-based tools.
+Tilt uses [**starlark-go**](https://github.com/google/starlark-go) (`go.starlark.net`), the canonical Go implementation of Starlark. This is the same implementation used by Skycfg and other Go-based tools.
 
 *Source: [go.mod](https://github.com/tilt-dev/tilt/blob/cbbb93e4abaf0a3d5e06e6c3c9fc7b74bf1d6ea5/go.mod#L67)*
 </Aside>
